--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(vlc-vaapi-enc)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules" ${CMAKE_MODULE_PATH})
 
-set(vlc-vaapi-enc_SOURCES test.cpp)
+set(vlc-vaapi-enc_SOURCES
+    plugin.cpp)
 
 find_package(Libva REQUIRED X11 DRM)
 find_package(VlcPlugin REQUIRED)
@@ -11,6 +12,6 @@ find_package(VlcPlugin REQUIRED)
 add_definitions(${Libva_DEFINITIONS} ${VlcPlugin_DEFINITIONS})
 include_directories(${Libva_INCLUDE_DIRS} ${VlcPlugin_INCLUDE_DIRS})
 
-add_executable(vlc-vaapi-enc ${vlc-vaapi-enc_SOURCES})
+add_library(vlc-vaapi-enc ${vlc-vaapi-enc_SOURCES})
 target_link_libraries(vlc-vaapi-enc ${Libva_LIBRARIES} ${VlcPlugin_LIBRARIES})
 
